#38634 fixed white space beneath the pop up.

--- a/ShiptechV2/assets/sass/themes/defaultweb/shiptech.scss
+++ b/ShiptechV2/assets/sass/themes/defaultweb/shiptech.scss
@@ -11582,6 +11582,8 @@ tr.title {
     overflow: hidden;
     height: 412px;
     margin-top: 10px;
+    background: transparent;
+    box-shadow: none;
   }
   .expansion-popup {
     .proceed-div {
